exports[`<Login.Field /> should render correctly 1`] = `
<div
  className="uk-form-row">
  <div
    className="uk-form-icon uk-width-1-1">
    <i
      className="uk-icon-email" />
    <input
      autoComplete="email"
      className="uk-width-1-1 uk-form-large"
      disabled={undefined}
      name="email"
      onBlur={[Function onBlur]}
      onChange={[Function onChange]}
      onDragStart={[Function onDragStart]}
      onDrop={[Function onDrop]}
      onFocus={[Function onFocus]}
      value="" />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={false}>
    &nbsp;
  </Collapse>
</div>
`;

exports[`<Login.Field /> should render correctly 2`] = `
<div
  className="uk-form-row">
  <div
    className="uk-form-icon uk-width-1-1">
    <i
      className="uk-icon-email" />
    <input
      autoComplete="email"
      className="uk-width-1-1 uk-form-large"
      disabled={undefined}
      name="email"
      onBlur={[Function onBlur]}
      onChange={[Function onChange]}
      onDragStart={[Function onDragStart]}
      onDrop={[Function onDrop]}
      onFocus={[Function onFocus]}
      submitting={true}
      value="" />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={false}>
    &nbsp;
  </Collapse>
</div>
`;

exports[`<Login.Field /> should render correctly 3`] = `
<div
  className="uk-form-row">
  <div
    className="uk-form-icon uk-width-1-1">
    <i
      className="uk-icon-password" />
    <input
      autoComplete="password"
      className="uk-width-1-1 uk-form-large"
      disabled={undefined}
      name="password"
      onBlur={[Function onBlur]}
      onChange={[Function onChange]}
      onDragStart={[Function onDragStart]}
      onDrop={[Function onDrop]}
      onFocus={[Function onFocus]}
      type="password"
      value="" />
  </div>
  <Collapse
    className="uk-form-help-block uk-text-left"
    isOpened={false}>
    &nbsp;
  </Collapse>
</div>
`;
